--- a/exp3/main.html
+++ b/exp3/main.html
@@ -23,14 +23,13 @@
                 <div>
                     <button id="startbtn">Start Game</button>
                 </div>
+                <div>
+                    <button id="creditsBtn">Credits</button>
+                </div>
             </div>
         </div>
     </section>
-    <section id="images">
-        <img id="playerImage" src="spaceship render 1080p v2.png" height="100px" width="100px">
-        <img id="projectileImage" src="Projectile 2.png" height="25px" width="25px">
-        <img id="enemyImage" src="Enemy Ship2.png" height="100px" width="100px">
-    </section>
+    <section id="credits"></section>
     <canvas></canvas>
     <script src="script.js"></script>
 </body>
